--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="index.html">
+       <img src="assets/images/logo.png" class="logo"  role="img" alt="logo FishEye Page d'accueil"/>
+      </a>
     </header>
     <main id="main">
       <div class="photograph-header">
