--- a/photographer.html
+++ b/photographer.html
@@ -8,32 +8,52 @@
     <title>Fisheye - photographe </title>
   </head>
   <body>
-    <header>
-      <a href="index.html">
-       <img src="assets/images/logo.png" class="logo"  role="img" alt="logo FishEye Page d'accueil"/>
-      </a>
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+    <body>
+      <header>
+        <a href="./index.html">
+          <img src="./assets/images/logo.png" alt="Fisheye Home Page" class="logo" />
+        </a>
+      </header>
+      
+      <main id="main">
+
+        <section class="photograph-header">
+          <article class="photograph_infos">
+          </article>
+          <button aria-label="Contact Me" class="contact_button" onclick="displayModal()">Contactez-moi</button>
+        </section>
+        <section class="photographermedia_section"></section>
+        <section class="photograph_medias"></section> 
+      </main>
+
+      <div id="contact_modal">
+        <div class="modal">
+          <header>
+            <h2 class="modal-title">Contactez-moi</h2>
+            <img src="./assets/icons/close.svg" alt="Close Contact form" onclick="closeModal()" />
+          </header>
+          <form onsubmit="sendMessage(event)">
+            <div>
+              <label for="firstName">Prénom</label>
+              <input id="firstName" name="firstName" />
+
+              <label for="lastName">Nom</label>
+              <input id="lastName" name="lastName" />
+
+              <label for="email">Email</label>
+              <input id="email" name="email" />
+
+              <label for="message">Message</label>
+              <textarea id="message" name="message"></textarea>
+            </div>
+            <button class="contact_button" aria-label="Send">Envoyer</button>
+          </form>
+        </div>
       </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
-  </body>
+     
+      </div>
+      <script src="./scripts/pages/photographer.js" ></script>
+      <script src="./scripts/factories/mediafactorie.js"></script>
+      <script src="./scripts/utils/contactForm.js" ></script>
+    </body>
 </html>
