--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="index.html">
           <img src="assets/images/logo.png" class="logo" role="img" alt="logo FishEye Page d'accueil"/>
         </a>
-        <h1>Nos photographes</h1>
+        <h1 tabindex="0">Nos photographes</h1>
     </header>
     <main id="main">
         <section class="photographer_section"></section>
