--- a/photographer.html
+++ b/photographer.html
@@ -69,9 +69,10 @@
           <img role="button" src="./assets/icons/close-24px 1.png" alt="close modal" tabindex="0" aria-label="fermer médias lightbox" class="closeLight" />
           <button class="previous" aria-label="photo précédente"> &lt; </button>
          <figure class="photoBox" aria-label="photo suivante">
+          <video class="mp4" type="video/mp4"></video>
             <img class="picture"> 
-            <video class="mp4"></video>
-            <h3 class="TitreMed"></h3>
+          
+            <h3 class="TitreMed" tabindex="0"></h3>
         </figure> 
           <button class="next"> &gt; </button>
         </div>
