--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye</title>
+    <title>Fisheye  - Trouvez votre photographe </title>
   </head>
-  <body>
+  <body>  
     <header>
         <a href="index.html">
-          <img src="assets/images/logo.png" class="logo" role="img" alt="logo FishEye Page d'accueil"/>
+          <img src="assets/images/logo.png" class="logo" role="img" alt="logo FishEye Page principale"/>
         </a>
         <h1 tabindex="0">Nos photographes</h1>
     </header>
