--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="FishEye est un site regroupants des photographes de grandes qualités. vous trouvez des photo et video d'une qualité professionnelle ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye  - Trouvez votre photographe </title>
