correction des bugs

--- a/photographer.html
+++ b/photographer.html
@@ -75,8 +75,8 @@
     </div>
   </div>
   <!-- lightbox -->
-  <dialog id="lightbox" role="dialog" aria-hidden="true" aria-label="vue rapprochée" tabindex="0">
-    <div class="content" aria-label="vue rapprochée">
+  <dialog id="lightbox" role="dialog" aria-hidden="true" aria-label="vue rapprochée" >
+    <div class="content" aria-label="vue rapprochée"tabindex="0">
       <figure class="photoBox">
         <img alt="#" class="picture" tabindex="0" />
         <video class="mp4" tabindex="0"></video>
